docs/0.2.2/en/components/index.mdx
---
title: Component integration
description: Choose a framework binding and understand the shared editor contract.
---

# Component integration

All bindings expose the same controlled content model. Framework adapters
translate naming and event conventions without creating a second editor
implementation.

## Framework bindings

| Framework | Import | Content binding |
| --- | --- | --- |
| [React](./react.mdx) | `@a3s-lab/office/react` | `content` and `onChange` |
| [Vue](./vue.mdx) | `@a3s-lab/office/vue` | `v-model:content` or `content` and `@change` |
| [Web Component](./web-component.mdx) | `@a3s-lab/office/web-component` | `.content` and the `change` event |

## Available editors

| Product | Component | Content contract |
| --- | --- | --- |
| Document | [`DocumentEditor`](./document.mdx) | `DocumentContent` |
| Markdown | [`MarkdownEditor`](./markdown.mdx) | `MarkdownContent` |
| Spreadsheet | [`SpreadsheetEditor`](./spreadsheet.mdx) | `SpreadsheetContent` |
| Presentation | [`PresentationEditor`](./presentation.mdx) | `PresentationContent` |
| PDF | [`PdfViewer`](./pdf.mdx) | `Blob` input and output ports |

## Shared surface properties

| Property | Type | Default | Description |
| --- | --- | --- | --- |
| `theme` | `'light' \| 'dark' \| 'system'` | `'system'` | Editor color mode. |
| `className` | `string` | — | React host class name. Vue and custom elements use normal `class`. |
| `style` | `CSSProperties` | — | React host inline style. The editor fills this host. |
| `preview` | `boolean` | `false` | Read-only surface for controlled editors. |
| `saveStatus` | `string` | editor-specific | Host-owned save status shown in the file surface. |
| `fileActions` | `readonly OfficeFileAction[]` | `[]` | Host file actions such as save, export, history, or approval. |
